--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -77,4 +77,11 @@
          services/core/java/com/android/server/policy/PhoneWindowManager.java
     -->
 <!--    <integer name="config_longPressOnAppSwitchBehavior">1</integer> -->
+
+    <!-- Lineage hardware features that should be disabled.
+         Logical OR of lineage-sdk LineageHardwareManager FEATURE_* constants.
+         Our libsdm-disp-vnd-apis claims support for color balance but it doesn't
+         actually work so disable it.  (FEATURE_COLOR_BALANCE = 0x20000) -->
+    <integer name="config_disableHardwareFeatures">131072</integer>
+
 </resources>
