XiaomiParts: add kcal support
taken from:
https://github.com/omnirom/android_device_leeco_zl1/commit/cdb1b9e2ae7f7612e0ca391c33e68ddedb181dce
credits: @darkobas

Also includes commits from:
https://github.com/Quantummech2000/DT-zenfone3

Signed-off-by: Nick <nickgunale@gmail.com>

# Conflicts:
#	XiaomiParts/res/values-ru/strings.xml
#	XiaomiParts/res/values-uk/strings.xml
#	XiaomiParts/res/values/strings.xml
#	XiaomiParts/res/xml/main.xml
#	XiaomiParts/src/com/mdroid/settings/device/Startup.java
#	rootdir/init.qcom.rc

--- a/XiaomiParts/res/xml/main.xml
+++ b/XiaomiParts/res/xml/main.xml
@@ -20,6 +20,7 @@
             android:key="vib_strength"
             android:title="@string/vib_strength_title_head" />
     </PreferenceCategory>
+
     <PreferenceCategory
         android:title="@string/category_torch">
         <com.mdroid.settings.device.YellowTorchBrightnessPreference
@@ -29,4 +30,14 @@
             android:key="white_torch_brightness"
             android:title="@string/white_torch_brightness_title_head" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/graphics_title">
+        <PreferenceScreen
+            android:key="kcal"
+            android:fragment="com.mdroid.settings.device.DisplayCalibration"
+            android:summary="@string/kcal_summary"
+            android:title="@string/kcal_title" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
