--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -62,6 +62,38 @@
          config to 7. -->
     <integer name="config_deviceHardwareWakeKeys">64</integer>
 
+    <!-- Control the behavior when the user long presses the home button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_longPressOnHomeBehavior">2</integer>
+
+    <!-- Control the behavior when the user long presses the menu button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_longPressOnMenuBehavior">8</integer>
+
     <!-- Control the behavior when the user long presses the app switch button.
             0 - Nothing
             1 - Menu key
@@ -76,11 +108,5 @@
          services/core/java/com/android/server/policy/PhoneWindowManager.java
     -->
     <integer name="config_longPressOnAppSwitchBehavior">1</integer>
-
-    <!-- Lineage hardware features that should be disabled.
-         Logical OR of lineage-sdk LineageHardwareManager FEATURE_* constants.
-         Our libsdm-disp-vnd-apis claims support for color balance but it doesn't
-         actually work so disable it.  (FEATURE_COLOR_BALANCE = 0x20000) -->
-    <integer name="config_disableHardwareFeatures">131072</integer>
 
 </resources>
