markw: Complete rebrand

--- a/XiaomiParts/res/xml/main.xml
+++ b/XiaomiParts/res/xml/main.xml
@@ -16,18 +16,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
         android:title="@string/category_vibrator">
-        <com.elixir.settings.device.VibratorStrengthPreference
+        <com.mdroid.settings.device.VibratorStrengthPreference
             android:key="vib_strength"
             android:title="@string/vib_strength_title_head"
             android:summary="@string/vib_strength_summary_head" />
     </PreferenceCategory>
     <PreferenceCategory
         android:title="@string/category_torch">
-        <com.elixir.settings.device.YellowTorchBrightnessPreference
+        <com.mdroid.settings.device.YellowTorchBrightnessPreference
             android:key="yellow_torch_brightness"
             android:title="@string/yellow_torch_brightness_title_head"
             android:summary="@string/yellow_torch_brightness_summary_head" />
-        <com.elixir.settings.device.WhiteTorchBrightnessPreference
+        <com.mdroid.settings.device.WhiteTorchBrightnessPreference
             android:key="white_torch_brightness"
             android:title="@string/white_torch_brightness_title_head"
             android:summary="@string/white_torch_brightness_summary_head" />
