--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -17,7 +17,7 @@
 */
 -->
 
-<device name="markw">
+<device name="Android">
   <!-- Most values are the incremental current used by a feature,
        in mA (measured at nominal voltage).
        The default values are deliberately incorrect dummy values.
@@ -42,10 +42,12 @@
   <item name="radio.active">231.8</item> <!-- cellular radio is transmitting/receiving, ~100-300mA -->
   <item name="radio.scanning">34.2</item> <!-- cellular radio scanning for signal, ~10mA -->
   <item name="gps.on">68.84</item> <!-- GPS is acquiring a signal, ~50mA -->
+  <array name="radio.on">
+      <value>3</value>
+      <value>2</value>
   <!-- Different CPU speeds as reported in
        /sys/devices/system/cpu/cpu0/cpufreq/stats/time_in_state -->
   <array name="cpu.speeds">
-      <value>400457</value> <!-- 400 MHz CPU speed -->
       <value>652800</value> <!-- 625 MHz CPU speed -->
       <value>806400</value> <!-- 806 MHz CPU speed -->
       <value>1036800</value> <!-- 1036 MHz CPU speed -->
@@ -53,14 +55,11 @@
       <value>1401600</value> <!-- 1401 MHz CPU speed -->
       <value>1689600</value> <!-- 1689 MHz CPU speed -->
       <value>1804800</value> <!-- 1804 MHz CPU speed -->
-      <value>1958400</value> <!-- 1958 MHz CPU speed -->
       <value>2016000</value> <!-- 2016 MHz CPU speed -->
-      <value>2150400</value> <!-- 2150 MHz CPU speed -->
       <value>2208000</value> <!-- 2208 MHz CPU speed -->
   </array>
   <!-- Current at each CPU speed, as per 'cpu.speeds' -->
   <array name="cpu.active">
-      <value>39.1</value>
       <value>42.6</value>
       <value>45.2</value>
       <value>47.0</value>
@@ -68,9 +67,7 @@
       <value>71.0</value>
       <value>76.0</value>
       <value>90.0</value>
-      <value>106.6</value>
       <value>113.6</value>
-      <value>120.4</value>
       <value>123.7</value>
   </array>
   <!-- Total power drawn by the system when CPUs (and the SoC) are in system suspend state. -->
@@ -79,4 +76,6 @@
   <item name="cpu.awake">8.1</item> 
   <!-- This is the battery capacity in mAh (measured at nominal voltage) -->
   <item name="battery.capacity">4100</item>
+  <allow-in-power-save package="com.google.android.gms" />
+  <allow-in-data-usage-save package="com.google.android.gms" />
 </device>
