--- a/overlay/packages/apps/Settings/res/values/mdroid_arrays.xml
+++ b/overlay/packages/apps/Settings/res/values/mdroid_arrays.xml
@@ -12,32 +12,14 @@
      limitations under the License.
 -->
 <resources>
-
-    <!-- Values for the notification light pulse spinners -->
-    <string-array name="notification_pulse_length_entries" translatable="false">
-        <item>@string/pulse_length_always_on</item>
-        <item>@string/pulse_length_very_short</item>
-        <item>@string/pulse_length_short</item>
-        <item>@string/pulse_length_normal</item>
-        <item>@string/pulse_length_long</item>
-    </string-array>
-
     <string-array name="notification_pulse_length_values" translatable="false">
         <item>0</item>
         <item>1000</item>
         <item>3000</item>
         <item>4000</item>
         <item>5000</item>
+        <item>6000</item>
     </string-array>
-
-    <string-array name="notification_pulse_speed_entries" translatable="false">
-        <item>@string/pulse_speed_very_fast</item>
-        <item>@string/pulse_speed_fast</item>
-        <item>@string/pulse_speed_normal</item>
-        <item>@string/pulse_speed_slow</item>
-        <item>@string/pulse_speed_very_slow</item>
-    </string-array>
-
     <string-array name="notification_pulse_speed_values" translatable="false">
         <item>1000</item>
         <item>3000</item>
@@ -45,5 +27,4 @@
         <item>5000</item>
         <item>6000</item>
     </string-array>
-
 </resources>
