--- a/overlay/frameworks/base/core/res/res/values/mdroid_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/mdroid_config.xml
@@ -23,5 +23,9 @@
     <!-- Whether to ignore RSSNR for LTE -->
     <bool name="config_ignore_rssnr">true</bool>
 
+    <!-- Time to give to the proximity sensor before toggling the flashlight with the Power button.
+    Set to -1 to disable the proximity sensor check at all-->
+    <integer name="config_flashlightProximityTimeout">-1</integer>
+
 </resources>
 
