markw: Use simple led colors

--- a/overlay/frameworks/base/core/res/res/values/mdroid_bools.xml
+++ b/overlay/frameworks/base/core/res/res/values/mdroid_bools.xml
@@ -17,4 +17,6 @@
 <resources>
     <!-- Whether device supports an alt. ambient display -->
     <bool name="config_alt_ambient_display">true</bool>
+
+    <bool name="config_isCrappyLedDevice">true</bool>
 </resources>
